--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --bg-main: theme('colors.bg_main');
+    --bg-card: theme('colors.bg_card');
+    --bg-hover: theme('colors.bg_hover');
+  }
+
+  body {
+    background-color: theme('colors.bg_main');
+    color: theme('colors.text_primary');
+    font-family: "Nunito"
+  }
+}
